<resources>
    <string name="app_name">Marvelnatics</string>


    <!--BARRA DE PESQUISA-->
    <string name="search">Search</string>

    <!--HOME-->
    <string name="tb_organize">ORGANIZE COLLECTION</string>
    <string name="tb_favorites">FAVORITES</string>

    <!--MENU-->
    <string name="nb_home">MAIN</string>
    <string name="nb_search">SEARCH</string>
    <string name="nb_profile">PROFILE</string>

    <!--Login e Cadastro -->
    <string name="cadastre_se">Register</string>
    <string name="entrar_com_facebook">Login with Facebook</string>
    <string name="entrar_com_google">Sign in with Google</string>
    <string name="login_entrar">Log in</string>
    <string name= "Esqueci_Senha">Forgot Password</string>
    <string name="cadastrar_com_facebook">Sign up with Facebook</string>
    <string name="cadastrar_com_google">Sign up with Google</string>
    <string name="cadastro_cadastrar">Register</string>
    <string name="nome">Name</string>
    <string name="sobrenome">Surname</string>
    <string name="email">Email</string>
    <string name="senha">password</string>

    <!--Main activity-->
    <string name="bt_my_favorites">MY FAVORITES</string>
    <string name="historia_em_destaque">Featured Story</string>
    <string name="personagens_mais_populares">Most popular characters</string>
    <string name="pesquisa">Search</string>


    <!--fragmento de busca-->
    <string name="ja_tenho">Already have</string>
    <string name="ja_li">Already have</string>
    <string name="quero_ler">Want to read</string>
    <string name="motrando_qtd_resultados">Showing 0 result(s)</string>


    <!--item colecao-->
    <string name="descricao">Description</string>

    <!--list histories-->
    <string name="nome_lista">List Name</string>


    <!--fragment comic-->
    <string name="personagens">Characters</string>
    <string name="titulo_comic">Title here</string>
    <string name="Data_publicação">Publication date: </string>
    <string name="Criador">Creator: </string>
    <string name="Artistas_capa">Cover artists: </string>
    <string name="Desenhistas">Designers: </string>

    <!--fragment profile-->
    <string name="NOME_APELIDO">Name (NICKNAME)</string>

    <!--item_busca_resultado-->
    <string name="titulo">Title</string>
    <string name="ano">Year</string>

    <!-- <string name="demo_comic_description">KRAVEN THE HUNTER" The world\'s greatest big game hunter has come to New York City to stalk his newest prey. Will Spider-Man be up to the challenge? And if going up against Kraven isn\'t enough, the Chameleon is set to strike if Kraven fails!</string> -->
    <string name="demo_comic_description" translatable="false">
    "KRAVEN THE HUNTER" The world\'s greatest big game hunter has come to New York City to stalk his newest prey. Will Spider-Man be up to the challenge? And if going up against Kraven isn\'t enough, the Chameleon is set to strike if Kraven fails!
    </string>



    <string name="facebook_app_id" translatable="false">1772865956205403</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1772865956205403</string>
    <!--    <string name="default_web_client_id">663362792865-hjjr6sbr0l2qk3epbbtsk1vknsp9tuon.apps.googleusercontent.comm</string>-->

    <string name="empty_list" translatable="false">A lista está vazia</string>
    <string name="logout" translatable="false">Sair</string>

</resources>